syntax = "proto3";

package video_stream;
option go_package = "github.com/psds-microservice/api-gateway/pkg/gen";

import "common.proto";
import "google/api/annotations.proto";

// Пустой запрос
message EmptyRequest {}

// Видео чанк для потоковой передачи
message VideoChunk {
  string stream_id = 1;
  string client_id = 2;
  bytes data = 3;
  int64 timestamp = 4;
  int32 sequence = 5;
  bool is_key_frame = 6;
  map<string, string> metadata = 7;
}

// Ответ на чанк
message ChunkAck {
  string status = 1;
  string message = 2;
  int64 received_at = 3;
  int32 next_expected = 4;
  float processing_time_ms = 5;
}

// Запросы для REST API (обратная совместимость)
message VideoFrame {
  string frame_id = 1;
  bytes frame_data = 2;
  int64 timestamp = 3;
  string camera_id = 4;
  string client_id = 5;
  int32 width = 6;
  int32 height = 7;
  string format = 8;
  map<string, string> metadata = 9;
}

message StartStreamRequest {
  string client_id = 1;
  string user_id = 2;
  string camera_name = 3;
  string filename = 4;
}

message StartStreamResponse {
  string stream_id = 1;
  string status = 2;
  string message = 3;
  map<string, string> metadata = 4;
}

message SendFrameRequest {
  string stream_id = 1;
  VideoFrame frame = 2;
  string client_id = 3;
  string user_name = 4;
}

message StopStreamRequest {
  string stream_id = 1;
  string client_id = 2;
  string filename = 3;
  int64 end_time = 4;
  int64 file_size = 5;
}

message StreamStats {
  string stream_id = 1;
  string client_id = 2;
  int64 start_time = 3;
  int64 duration = 4;
  int64 frames_received = 5;
  int64 bytes_received = 6;
  float average_fps = 7;
  float current_fps = 8;
  int32 width = 9;
  int32 height = 10;
  string codec = 11;
  bool is_recording = 12;
  bool is_streaming = 13;
}

message ActiveStream {
  string stream_id = 1;
  string client_id = 2;
  string user_name = 3;
  string camera_name = 4;
  bool is_recording = 5;
  bool is_streaming = 6;
  map<string, string> metadata = 7;
}

message GetStreamStatsRequest {
  string stream_id = 1;
  string client_id = 2;
}

message GetStreamsByClientRequest {
  string client_id = 1;
}

message GetStreamsByClientResponse {
  repeated ActiveStream streams = 1;
}

message GetStreamRequest {
  string stream_id = 1;
}

message GetAllStatsResponse {
  repeated StreamStats stats = 1;
  int64 total_frames = 2;
  int64 total_bytes = 3;
  float average_fps = 4;
}

service VideoStreamService {
  rpc StreamVideo(stream VideoChunk) returns (stream ChunkAck);
  rpc SendFrame(SendFrameRequest) returns (common.ApiResponse) {
    option (google.api.http) = { post: "/api/v1/video/frame" body: "*" };
  }
  rpc StartStream(StartStreamRequest) returns (StartStreamResponse) {
    option (google.api.http) = { post: "/api/v1/video/start" body: "*" };
  }
  rpc StopStream(StopStreamRequest) returns (common.ApiResponse) {
    option (google.api.http) = { post: "/api/v1/video/stop" body: "*" };
  }
  rpc GetActiveStreams(EmptyRequest) returns (stream ActiveStream);
  rpc GetStreamStats(GetStreamStatsRequest) returns (StreamStats) {
    option (google.api.http) = { get: "/api/v1/video/stats/{client_id}" };
  }
  rpc GetStreamsByClient(GetStreamsByClientRequest) returns (GetStreamsByClientResponse) {
    option (google.api.http) = { get: "/api/v1/video/client/{client_id}/streams" };
  }
  rpc GetStream(GetStreamRequest) returns (ActiveStream) {
    option (google.api.http) = { get: "/api/v1/video/stream/{stream_id}" };
  }
  rpc GetAllStats(EmptyRequest) returns (GetAllStatsResponse) {
    option (google.api.http) = { get: "/api/v1/video/all-stats" };
  }
}
